@@ -3,7 +3,6 @@ package de.fraunhofer.isst.health.transit.service.merge;
 import ca.uhn.fhir.context.FhirContext;
 import de.fraunhofer.isst.health.transit.ConstantsTransit;
 import de.fraunhofer.isst.health.transit.spring.config.DmsProjectFileFhirClientConfig;
-import de.fraunhofer.isst.health.transit.spring.config.TransitVariablesConfig;
 import de.fraunhofer.isst.health.transit.utils.*;
 import de.fraunhofer.isst.health.transit.utils.projectfile.enums.EDataUsageProjectCode;
 import de.fraunhofer.isst.health.transit.utils.projectfile.enums.EEndpointPayloadMimeType;
@@ -36,24 +35,21 @@ public class ArchiveData implements ServiceTask {
     private static final int TIMEOUT_S = 30;
     private static final String UPLOADENDPOINT = "/upl/";
     private static final String HEALTHENDPOINT = "/health";
-    private String dupIdentifier;
-    private String nginxUrl;
     private DmsProjectFileFhirClientConfig dmsProjectFileFhirClientConfig;
-    private TransitVariablesConfig transitVariablesConfig;
 
-    public ArchiveData(DmsProjectFileFhirClientConfig dmsProjectFileFhirClientConfig, TransitVariablesConfig transitVariablesConfig) {
+    public ArchiveData(DmsProjectFileFhirClientConfig dmsProjectFileFhirClientConfig) {
         super();
         this.dmsProjectFileFhirClientConfig = dmsProjectFileFhirClientConfig;
-        this.transitVariablesConfig = transitVariablesConfig;
     }
 
     @Override
-    public void execute(ProcessPluginApi api, Variables variables) throws ErrorBoundaryEvent, Exception {
+    public void execute(ProcessPluginApi api, Variables variables) throws ErrorBoundaryEvent, InterruptedException {
         LOGGER.info("ArchiveStore start");
 
-        dupIdentifier = (variables.getString(ConstantsTransit.DUPIDENTIFIER)).toLowerCase(Locale.ROOT);
+        String dupIdentifier = (variables.getString(ConstantsTransit.DUPIDENTIFIER)).toLowerCase(Locale.ROOT);
+        String nginxUrl = variables.getString(ConstantsTransit.ARCHIVEURL);
+
         Bundle collection = (Bundle) variables.getFhirResource(ConstantsTransit.COLLECTION_BUNDLE);
-        nginxUrl = variables.getString(ConstantsTransit.ARCHIVEURL);
 
         String file = FhirContext.forR4().newJsonParser().encodeResourceToString(collection);
 
@@ -75,7 +71,7 @@ public class ArchiveData implements ServiceTask {
                     TimeUnit.SECONDS);
 
             //Build Client
-            try (Client client = builder.build();) {
+            try (Client client = builder.build()) {
 
                 TimeUnit.MINUTES.sleep(RETRYDELAYMINUTES);
                 WebTarget available = client.target(nginxUrl + HEALTHENDPOINT);
@@ -138,7 +134,7 @@ public class ArchiveData implements ServiceTask {
         status.setLastUpdated(new DateTimeType(Calendar.getInstance().getTime()));
         status.setId(dupIdentifier);
         status.setCode(EDataUsageProjectCode.ARCHIVED);
-        status.setCorrelatedTask(dataUsageProject.getTasks().get(0));
+        status.setCorrelatedTask(dataUsageProject.getTasks().getFirst());
 
         dataUsageProject.addStatus(status);
 
